# Olist-ecommerce-project

./: .gitignore  README.md  main.py  pyproject.toml
Airflow/dags/: 1_dag_fetch_data.py  2_dag_bronze_to_silver.py  3_dag_silver_to_gold.py  assets.py
dbt/olist_ecommerce/: dbt_project.yml  profiles.yml.example
dbt/olist_ecommerce/macros/: drop_gcp_tables.sql
dbt/olist_ecommerce/models/gold/: most_used_payment_type_gold.sql  orders_per_state_gold.sql  revenue_by_category.sql  revenue_by_state_gold.sql  review_based_on_category_gold.sql  review_based_on_waiting_time_gold.sql  seller_leaderboard_gold.sql
dbt/olist_ecommerce/models/silver/: customers_silver.py  geolocation_dataset.py  order_items_silver.py  order_payments_silver.py  order_reviews_silver.py  orders_silver.py  product_category_translations.py  products_silver.py  properties.yml  sellers_silver.py
dbt/olist_ecommerce/models/staging/: src_olist.yml  unique_geolocation_cities.sql
dbt/olist_ecommerce/seeds/: raw_data_unique_geolocation_cities.csv
docker/: .env.example  docker-compose.yaml  dockerfile
ingestion/: ingestion.py  notebook.ipynb
terraform/: main.tf  variables.tf
