[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-ecommerce-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "astronomer-cosmos>=1.14.2",
    "dbt-bigquery>=1.8,<1.9",
    "dbt-core>=1.8,<1.9",
    "google-cloud>=0.34.0",
    "google-cloud-storage<3.0.0",
    "kaggle==1.6.14",
    "psycopg2-binary>=2.9.12",
    "pyspark==3.5.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]
